2017-11-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway <nathanst@ontko.com>
	* common-src/match.c (match_datastamp) Allow "*" wildcard

2017-11-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c (process_dumpline): debug once error to write to
	  the state file

2017-11-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Do not allow double quote in section name or
	  label

2017-11-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/compile, config/config.guess: Set executable bit

2017-11-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2.pm, perl/Amanda/DB/Catalog2/MySQL.pm,
	  perl/Amanda/DB/Catalog2/PgSQL.pm, perl/Amanda/DB/Catalog2/SQL.pm,
	  perl/Amanda/DB/Catalog2/log.pm: Many fix

2017-11-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Config.swg (subsection_names):Add missing entry
	* common-src/amgetconf.pl: Sort the list output

2017-11-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/success-dumper-taper-vault.pl: Fix for any diskname

2017-11-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Fix setting dlet
	* installcheck/success-dumper-taper-vault.pl: Fix

2017-11-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/catalogs/vault1.cat,
	  installcheck/catalogs/vault2.cat,
	  installcheck/catalogs/vault3.cat: Fix for previous patch

2017-11-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog.pm: s/exists/defined/g
	* perl/Amanda/Recovery/Planner.pm: Pass separate args to get_dumps
	  instead of a dumpspecs (becasue it match instead of equal)
	* perl/Amanda/Report.pm: storage_list must include vault-storage
	* perl/Amanda/Status.pm: Fix
	* perl/Amanda/Taper/Worker.pm: Pass separate args to make_plan
	  instead of a dumpspecs (becasue it match instead of equal)
	* installcheck/success-dumper-taper-vault.pl: New check